# btc_puzzle_hunter

./: .gitignore  CLAUDE.md  Cargo.toml  DYNAMIC_BENCHMARKING.md  README.md  auto_benchmark_distribution.json  examples.md  my_distribution.json  unsolved_puzzles.json  worker_distribution.json
examples/: auto_benchmark_example.rs  parameter_test.rs  worker_distribution_example.rs
src/: bitcoin_utils.rs  lib.rs  main.rs  puzzle_data.rs  random_walk.rs
