[package]
name = "btc_puzzle_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = "0.29"
bitcoin = "0.31"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
indicatif = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
